--- a/codefresh.yml
+++ b/codefresh.yml
@@ -21,3 +21,21 @@ steps:
     type: push
     candidate: ${{buildimage}}
     tag: ${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+
+  push_image_nexus_latest:
+    title: Push to Nexus Repo (latest)
+    type: push
+    candidate: ${{buildimage}}
+    tag: latest
+    registry: sonatype-docker-internal
+    when:
+      branch:
+        only:
+          - master
+
+  push_image_neuxs_gitbranch_gitsha:
+    title: Push to Nexus Repo (gitbranch + gitsha)
+    type: push
+    candidate: ${{buildimage}}
+    tag: ${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+    registry: sonatype-docker-internal
